CopyFilesToMediaServer
