# server/swagger/api.swagger.json
@@ -814,14 +814,14 @@
         "DeterminingNeedConvertFiles",
         "StartMergeVideoFiles",
         "WaitingMergeVideoFiles",
-        "CopyVideoFiles",
+        "CreateHardLinkCopy",
         "SetVideoFileGroup",
         "GetCatalogsSize",
         "SetMediaMetaData",
         "SendDeliveryNotification"
       ],
       "default": "TVShowDeliveryStatusUnknown",
-      "title": "- TVShowDeliveryStatusUnknown: Неизвестный статус доставки\n - GenerateSearchQuery: Генерация запроса к трекеру\n - SearchTorrents: Поиск раздач сезона сериала/фильма\n - WaitingUserChoseTorrent: Ожидание выбора раздачи пользователем\n - GetMagnetLink: Получение магнет ссылки\n - AddTorrentToTorrentClient: Добавление раздачи для скачивания торрент клиентом\n - PrepareFileMatches: Получение информации о файлах раздачи\n - WaitingChoseFileMatches: Ожидание подтверждения пользователем соответствий выбора файлов\n - WaitingTorrentDownloadComplete: Ожидание завершения окончания скачивания раздачи\n - CreateVideoContentCatalogs: Формирование каталогов и иерархии файлов\n - DeterminingNeedConvertFiles: Определение необходимости конвертации файлов\n - StartMergeVideoFiles: Запуск конвертирования файлов\n - WaitingMergeVideoFiles: Ожидание завершения конвертации файлов\n - CopyVideoFiles: Копирование файлов из раздачи в каталог медиасервера\n - SetVideoFileGroup: Установка группы файлам\n - GetCatalogsSize: GetCatalogsSize получение размеров каталогов сериала\n - SetMediaMetaData: Установка методаных серий сезона сериала/фильма в медиасервере\n - SendDeliveryNotification: Отправка уведомления в telegramm о успешной доставки"
+      "title": "- TVShowDeliveryStatusUnknown: Неизвестный статус доставки\n - GenerateSearchQuery: Генерация запроса к трекеру\n - SearchTorrents: Поиск раздач сезона сериала/фильма\n - WaitingUserChoseTorrent: Ожидание выбора раздачи пользователем\n - GetMagnetLink: Получение магнет ссылки\n - AddTorrentToTorrentClient: Добавление раздачи для скачивания торрент клиентом\n - PrepareFileMatches: Получение информации о файлах раздачи\n - WaitingChoseFileMatches: Ожидание подтверждения пользователем соответствий выбора файлов\n - WaitingTorrentDownloadComplete: Ожидание завершения окончания скачивания раздачи\n - CreateVideoContentCatalogs: Формирование каталогов и иерархии файлов\n - DeterminingNeedConvertFiles: Определение необходимости конвертации файлов\n - StartMergeVideoFiles: Запуск конвертирования файлов\n - WaitingMergeVideoFiles: Ожидание завершения конвертации файлов\n - CreateHardLinkCopy: Копирование файлов из раздачи в каталог медиасервера (точнее создание симлинков)\n - SetVideoFileGroup: Установка группы файлам\n - GetCatalogsSize: GetCatalogsSize получение размеров каталогов сериала\n - SetMediaMetaData: Установка методаных серий сезона сериала/фильма в медиасервере\n - SendDeliveryNotification: Отправка уведомления в telegramm о успешной доставки"
     },
     "TVShowID": {
       "type": "object",
